src/css/Projects.css
.container-knowledgesCards {
	margin-top: 14rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.sectionKnowledges {
	width: 100%;
	min-height: 60rem;
	padding: 3rem 0 8rem 0;
	display: flex;
	gap: 2rem 0;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	background-color: #101010;
}

.projects-h1 {
	padding-top: 2rem;
	margin: 4rem 0 8px 0;
	letter-spacing: -1.2px;
	line-height: 1.1;
	text-align: center;
	grid-column: -1/1;
	width: 100%;
	font-size: 3rem;
	font-weight: 500;
	color: #efeaea;
}

.cardKnowledges {
	height: 80%;
	padding: 4.4rem 0;
	position: relative;
	display: grid;
	gap: 2.2rem 1rem;
	grid-template-columns: repeat(auto-fit, minmax(21rem, 1fr));
	width: 100%;
	align-items: center;
	justify-items: center;
	background: linear-gradient(to top, #101010, #151515);
}

.cardKnowledgesBorder {
	left: 1/2;
	top: 0;
	width: 90%;
	height: 1px;
	user-select: none;
	pointer-events: none;
	position: absolute;
	translate: (1/2, 1/2);
	background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(255, 255, 255, 0.0) 0%, rgba(198, 198, 198, 0.67) 50%, rgba(0, 0, 0, 0) 100%);
}

.cardKnowledgesBg {
	left: 1/2;
	top: 0;
	height: 100%;
	width: 100%;
	user-select: none;
	pointer-events: none;
	position: absolute;
	translate: (1/2, 1/2);
}

.projectMain {
	height: fit-content;
	width: 21rem;
	padding: 2rem 1.2rem;
	border-radius: 1rem;
	display: grid;
	align-items: center;
	justify-items: center;
	gap: .5rem;
	background: linear-gradient(355deg, #101010, #1b1b1b);
}

.projectMain img {
	border-radius: 1rem;
	box-shadow: 0px 4px 14px #00000036;
}

.projectMain p {
	line-height: 1.7;
	font-size: 1rem;
	text-align: center;
	color: #aaa9a9;
}

.projectMain span {
	color: #9dacea;
	font-weight: 500;
}

.wrapperBtnsProjectMain {
	margin-top: 1rem;
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.wrapperBtnsProjectMain a {
	height: 50px;
	width: 12.6rem;
	display: flex;
	border-radius: 50px;
	background-color: #eee;
	align-items: center;
	justify-content: center;
	text-decoration: none;
	color: #181818;
}

.ankerDiscover {
	display: flex;
	gap: .3rem;
}

.wrapperBtnsProjectMain a:last-child {
	color: #fff;
	height: fit-content;
	align-self: center;
	width: fit-content;
	background: none !important;
}

.wrapperBtnsProjectMain a:hover {
	text-decoration: underline;
}

.containerProjects {
	display: flex;
	padding-bottom: 4rem;
	flex-direction: column;
	background-color: #101010;
}

.containerProjects p {
	width: 100%;
	font-size: 1.3rem;
	text-align: center;
	color: #b8b8b8;
}

.projects-h2 {
	width: 100%;
	padding: 4rem 0 2rem 0;
	font-size: 4.5rem;
	letter-spacing: -1px;
	line-height: .85;
	text-align: center;
	color: #fff;
}

.textBlue-onBlack {
	color: #B1BFF7
}

.wrapperSlider {
	width: 100%;
	padding: 2rem;
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 0 3rem;
	position: relative;
	overflow: scroll;
	scrollbar-width: none;
}

.sideLeftBlur,
.sideRightBlur {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 40%;
	background: linear-gradient(to right, #121212 4%, transparent);
	z-index: 3;
}

.sideRightBlur {
	left: auto;
	right: 0;
	background: linear-gradient(to left, #121212 4%, transparent);
}

.projectInSliderRight,
.projectInSliderLeft {
	-webkit-animation: slide-to-right 20s linear infinite alternate;
	animation: slide-to-right 20s linear infinite alternate;
	max-height: 400px;
}

.projectInSliderLeft {
	-webkit-animation: slide-to-left 20s linear infinite alternate;
	animation: slide-to-left 20s linear infinite alternate;
}

@keyframes slide-to-right {
	0% {
		left: 0;
		transform: translateX(200%);
	}

	100% {
		left: 100%;
		transform: translateX(-200%);
	}
}

@keyframes slide-to-left {
	0% {
		left: 0;
		transform: translateX(-100%);
	}

	100% {
		left: 100%;
		transform: translateX(100%);
	}
}

@media (max-width: 700px) {

	.projectInSliderRight,
	.projectInSliderLeft {
		-webkit-animation: none;
		animation: none;
		max-height: 400px;
	}

	.projectInSliderLeft {
		-webkit-animation: none;
		animation: none;
	}

	.wrapperSlider {
		gap: 0 1.3rem;
		padding-inline: 3rem;
		justify-content: flex-start;
	}

	.sideLeftBlur,
	.sideRightBlur {
		display: none;
	}
}

.wrapperGradientTitle {
	font-size: 5rem;
	background: #E5E5E5;
	background: radial-gradient(circle farthest-corner at center center, #898989 0%, #181818 100%);
	-webkit-background-clip: text;
	background-clip: text;
	-webkit-text-fill-color: transparent;
}

